fixed responsiveness of image on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -227,11 +227,14 @@
         justify-content:flex-start;
     }
     .weather-card{
-        margin:0.4rem;
+        margin:0.4rem 0.1rem;
         padding:1rem 0;
         height:auto;
-        max-width:100vw;
+        max-width:90vw;
     } 
+    #weather-card > * {
+        margin:0.2rem;
+    }
     #details-bar{
         height:auto;
         flex-flow:column;
@@ -243,8 +246,15 @@
         width:100%;
         text-align:center;
     }
-    .weather-icon{
-        width:auto;
+    .weather-icon > img{
+        width:100%;
+        min-width:128px;
+        height:auto;
+        margin:0;
+        padding:0;
+    }
+    .temperature{
+        font-size:4rem;
     }
     }
     
